--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/3.3 Image Elements/index.html"
+    "livePreview.defaultPreviewPath": "/6.0 CSS Colors/index.html"
 }
